--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,13 @@ services:
     environment:
       - MONGO_INITDB_ROOT_USERNAME=apinest
       - MONGO_INITDB_ROOT_PASSWORD=123456
+
+  mysql:
+    image: mysql:5.6.42
+    container_name: app-mysql
+    volumes:
+        - "./.docker/mysql:/var/lib/mysql"
+    ports:
+        - "3306:3306"
+    environment:
+        - MYSQL_ROOT_PASSWORD=123456
