--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@prisma/client": "^4.14.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "mongoose": "^6.8.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
@@ -42,7 +45,6 @@
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
     "@types/mongoose": "^5.11.97",
-    "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.11",
@@ -53,6 +55,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "28.1.3",
     "prettier": "^2.3.2",
+    "prisma": "^4.14.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.8",
