add crypt password

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     image: mysql:5.6.42
     container_name: app-mysql
     volumes:
-        - "./.docker/mysql:/var/lib/mysql"
+        - "./docker/mysql:/var/lib/mysql"
     ports:
         - "3306:3306"
     environment:
